--- a/blocks/v2-social-block/v2-social-block.css
+++ b/blocks/v2-social-block/v2-social-block.css
@@ -2,32 +2,29 @@
   padding: 40px 16px;
 }
 
-.v2-social-block-container {
-  --social-block-padding: 24px 16px;
-  --social-block-gap: 16px;
-  --social-block-list-gap: 12px;
+.redesign-v2 .section.v2-social-block-container .v2-social-block-wrapper {
+  padding: 0;
 }
 
 .v2-social-block {
+  --social-block-padding: 24px 16px;
+  --social-block-gap: 16px;
+  --social-block-list-gap: 12px;
   --social-link-color: var(--c-main-black);
   --social-text-color: var(--c-main-black);
-}
 
-.redesign-v2 .section .v2-social-block-wrapper {
   padding: var(--social-block-padding);
   border-radius: 8px;
 }
 
-.v2-social-block-wrapper--black {
-  background-color: var(--c-main-black);
-}
-
 .v2-social-block--black {
+  background-color: var(--c-main-black);
+
   --social-link-color: var(--c-white);
   --social-text-color: var(--c-grey-2);
 }
 
-.v2-social-block-wrapper--gray {
+.v2-social-block--gray {
   background-color: var(--c-grey-50);
 }
 
@@ -67,7 +64,7 @@
 }
 
 .v2-social-block__button:focus-visible {
-  outline: 2px solid var(--light-border-focus);
+  outline: 2px solid var(--border-focus);
   outline-offset: 1px;
 }
 
@@ -81,7 +78,7 @@
     padding: 40px 32px;
   }
 
-  .v2-social-block-container {
+  .v2-social-block {
     --social-block-padding: 32px;
   }
 
@@ -100,8 +97,8 @@
     padding: 48px 0;
   }
 
-  .v2-social-block-container {
+  .v2-social-block {
     --social-block-padding: 48px 40px;
     --social-block-gap: 32px;
-  }  
+  }
 }
