--- a/blocks/v2-static-content-carousel/v2-static-content-carousel.css
+++ b/blocks/v2-static-content-carousel/v2-static-content-carousel.css
@@ -86,7 +86,7 @@
 
 /* stylelint-disable-next-line no-descending-specificity */
 .v2-static-content-carousel__button:focus-visible {
-  outline: 2px solid var(--light-border-focus);
+  outline: 2px solid var(--border-focus);
   outline-offset: 1px;
 }
 
@@ -100,12 +100,12 @@
 }
 
 .v2-static-content-carousel__button .icon-arrow-left svg,
-.v2-static-content-carousel__button .icon-arrow-right svg { 
+.v2-static-content-carousel__button .icon-arrow-right svg {
   width: 48px;
   height: 48px;
 }
 
-.v2-static-content-carousel__button:disabled .icon-arrow-right svg path, 
+.v2-static-content-carousel__button:disabled .icon-arrow-right svg path,
 .v2-static-content-carousel__button:disabled .icon-arrow-left svg path {
   fill: var(--c-grey-2)
 }
