--- a/blocks/v2-inpage-navigation/v2-inpage-navigation.css
+++ b/blocks/v2-inpage-navigation/v2-inpage-navigation.css
@@ -1,5 +1,5 @@
 :root {
-  --inpage-navigation-height: 72px;
+  --inpage-navigation-height: 58px;
 }
 
 .v2-inpage-navigation-wrapper {
@@ -11,7 +11,7 @@
   top: var(--nav-height);
   width: 100%;
   z-index: var(--z-index-inpage-nav);
-  transition: transform var(--duration-medium) ease-in-out;
+  transition: transform var(--duration-medium) ease-in-out, z-index var(--duration-medium) ease-in-out;
 }
 
 /* As the first section in main doesn't need to have padding-top
@@ -19,6 +19,10 @@ and inpage navigation is taking the first position,
 then we change it for the next section item in main */
 .v2-inpage-navigation-wrapper + .section {
   padding-top: 0;
+}
+
+.v2-inpage-navigation--open {
+  z-index: var(--z-index-inpage-nav-open);
 }
 
 .v2-inpage-navigation--open .v2-inpage-navigation__items-container {
@@ -33,12 +37,13 @@ then we change it for the next section item in main */
 .v2-inpage-navigation {
   border-width: 1px 0;
   border-style: solid;
-  border-color: #EFEFEF;
+  border-color: var(--c-grey-50);
+  height: var(--inpage-navigation-height);
 }
 
 .v2-inpage-navigation__wrapper {
   display: flex;
-  padding: 16px;
+  padding: 8px 16px;
 }
 
 .v2-inpage-navigation__dropdown {
@@ -100,9 +105,11 @@ then we change it for the next section item in main */
   height: 44px;
 }
 
-.v2-inpage-navigation__items-close svg {
+.v2-inpage-navigation__items-close .icon svg {
   display: block;
   margin: auto;
+  width: 24px;
+  height: 24px;
 }
 
 .v2-inpage-navigation__items-close:focus-visible {
@@ -127,9 +134,10 @@ then we change it for the next section item in main */
 
 .v2-inpage-navigation__item button,
 .v2-inpage-navigation__selected-item-wrapper {
+  padding: 0;
   background: none;
   border: 0;
-  color: var(--c-main-black);
+  color: var(--c-grey-4);
   cursor: pointer;
   display: block;
   font-family: var(--ff-volvo-novum);
@@ -139,23 +147,19 @@ then we change it for the next section item in main */
   margin: 0;
   width: 100%;
   border-radius: 1px;
-  }
+}
 
 .v2-inpage-navigation__item button:focus-visible {
   outline-offset: 5px;
 }
 
 /* stylelint-disable-next-line no-descending-specificity */
-.v2-inpage-navigation__selected-item-wrapper,
 .v2-inpage-navigation__item--active button,
 .v2-inpage-navigation__item button:hover,
 .v2-inpage-navigation__item button:active,
-.v2-inpage-navigation__item button:focus,
-.v2-inpage-navigation__selected-item-wrapper:hover,
-.v2-inpage-navigation__selected-item-wrapper:active
-.v2-inpage-navigation__selected-item-wrapper:focus,
-.v2-inpage-navigation__dropdown--open .v2-inpage-navigation__selected-item-wrapper {
+.v2-inpage-navigation__item button:focus {
   font-family: var(--ff-volvo-novum-medium);
+  color: var(--c-main-black);
 }
 
 /* stylelint-disable-next-line no-descending-specificity */
@@ -170,10 +174,10 @@ then we change it for the next section item in main */
   gap: 8px;
 }
 
-.v2-inpage-navigation__selected-item-wrapper svg {
-  height: 16px;
+.v2-inpage-navigation__selected-item-wrapper .icon svg {
+  width: 24px;
+  height: 24px;
   transition: transform var(--duration-small) var(--easing-standard);
-  width: 16px;
 }
 
 .v2-inpage-navigation__dropdown--open .v2-inpage-navigation__selected-item-wrapper svg {
@@ -184,7 +188,7 @@ then we change it for the next section item in main */
 
 .redesign-v2 a.button.v2-inpage-navigation__cta:any-link {
   height: auto;
-  padding: 8px 20px;
+  padding: 10px 20px;
   line-height: var(--f-button-line-height);
 }
 
@@ -207,7 +211,7 @@ then we change it for the next section item in main */
   .v2-inpage-navigation__wrapper {
     align-items: center;
     max-width: var(--wrapper-width);
-    padding: 11px 0;
+    padding: 10px 0;
     margin: 0 auto;
   }
 
@@ -260,7 +264,6 @@ then we change it for the next section item in main */
 
   .v2-inpage-navigation__item button {
     position: relative;
-    color: var(--c-grey-4);
     padding: 12px 0;
   }
 
