Error prompts on empty / invalid fields are not correctly displayed on Chrome with version below 119 #279 (#281)
* #279 - Add :invalid when :user-invalid is not supported

--- a/blocks/v2-event-notify/v2-event-notify.css
+++ b/blocks/v2-event-notify/v2-event-notify.css
@@ -94,6 +94,14 @@
   border-color: var(--c-error-red);
 }
 
+@supports not selector(:user-invalid) {
+  .v2-event-notify__container input:invalid,
+  .v2-event-notify__container input:invalid:hover,
+  .v2-event-notify__container input:invalid:focus {
+    border-color: var(--c-error-red);
+  }
+}
+
 .v2-event-notify__container .event-notify__add-event-button {
   cursor: pointer;
 }
