--- a/blocks/v2-event-notify/v2-event-notify.css
+++ b/blocks/v2-event-notify/v2-event-notify.css
@@ -1,3 +1,11 @@
+.redesign-v2 .section .v2-event-notify-wrapper {
+  padding-top: 0;
+}
+
+.v2-event-notify__container {
+  margin-bottom: 32px;
+}
+
 .v2-event-notify__container > * {
   max-width: 694px;
   margin: auto;
@@ -9,7 +17,7 @@
   gap: 8px;
   text-align: center;
   max-width: var(--text-block-max-width);
-  margin: 40px auto;
+  margin: 0 auto 40px;
 }
 
 .v2-event-notify__container .v2-event-notify__title {
