Content Carousel typography adjustments #297 Content Carousel fading effect #305 (#307)

--- a/blocks/v2-static-content-carousel/v2-static-content-carousel.css
+++ b/blocks/v2-static-content-carousel/v2-static-content-carousel.css
@@ -1,9 +1,9 @@
 .v2-static-content-carousel {
-  --static-content-carousel-row-gap: 32px;
+  --static-content-carousel-row-gap: 24px;
   --static-content-carousel-list-gap: 8px;
   --static-content-carousel-col-gap: 16px;
+  --static-content-carousel-container-margin: 16px;
   --static-content-card-width: 85%;
-  --static-content-card-height: 250px;
 }
 
 .v2-static-content-carousel__row {
@@ -22,6 +22,11 @@
   padding-right: 32px;
 }
 
+.v2-static-content-carousel__images-list-col {
+  margin-left: calc(var(--static-content-carousel-container-margin) * -1);
+  margin-right: calc(var(--static-content-carousel-container-margin) * -1);
+}
+
 .v2-static-content-carousel__images-list {
   list-style-type: none;
   display: flex;
@@ -29,7 +34,20 @@
   scroll-behavior: smooth;
   scroll-snap-align: start;
   scroll-snap-type: x mandatory;
+  scrollbar-width: none;
   gap: var(--static-content-carousel-list-gap);
+}
+
+.v2-static-content-carousel__images-list::before,
+.v2-static-content-carousel__images-list::after {
+  content: '';
+  display: block;
+  flex: 0 0 var(--static-content-carousel-container-margin);
+  min-height: 1px;
+}
+
+.v2-static-content-carousel__images-list::after {
+  flex: 0 0 calc(var(--static-content-carousel-container-margin) / 2);
 }
 
 .v2-static-content-carousel__images-list::-webkit-scrollbar {
@@ -37,15 +55,14 @@
 }
 
 .v2-static-content-carousel__images-list-item {
+  scroll-margin: 0 var(--static-content-carousel-container-margin);
   scroll-snap-align: start;
   flex: 0 0 var(--static-content-card-width);
 }
 
 .v2-static-content-carousel__heading {
-  font-family: var(--ff-volvo-novum-medium);
-  font-size: var(--f-heading-4-font-size);
-  letter-spacing: var(--f-heading-4-letter-spacing);
-  line-height: var(--f-heading-4-line-height);
+  font: var(--f-heading-5-font-size)/var(--f-heading-5-line-height) var(--ff-volvo-novum-medium);
+  letter-spacing: 0.25px;
 }
 
 .v2-static-content-carousel__text {
@@ -64,12 +81,12 @@
 
 .v2-static-content-carousel__figure-text {
   padding-top: 16px;
-  font-size: var(--f-body-font-size);
-  line-height: var(--f-body-line-heigh);
-  letter-spacing: var(--f-body-letter-spacing);
+  font: var(--f-overline-font-size)/var(--f-overline-line-height) var(--font-family-body);
+  letter-spacing: var(--f-overline-letter-spacing);
 }
 
-.v2-static-content-carousel__arrowcontrols {
+ul.v2-static-content-carousel__arrowcontrols {
+  margin-left: var(--static-content-carousel-container-margin);
   list-style-type: none;
   display: flex;
   gap: 24px;
@@ -112,11 +129,11 @@
 
 @media screen and (min-width: 744px) {
   .v2-static-content-carousel {
-    --static-content-carousel-row-gap: 48px;
+    --static-content-carousel-row-gap: 32px;
     --static-content-carousel-list-gap: 20px;
     --static-content-carousel-col-gap: 24px;
+    --static-content-carousel-container-margin: 32px;
     --static-content-card-width: clamp(506px, 68%, calc((100% - var(--static-content-carousel-list-gap))/1.25));
-    --static-content-card-height: 432px;
   }
 
   .v2-static-content-carousel__images-list-col {
@@ -140,12 +157,13 @@
   }
 
   .v2-static-content-carousel {
-    --static-content-carousel-row-gap: 91px;
+    --static-content-carousel-row-gap: 72px;
+    --static-content-carousel-container-margin: 20px;
     --static-content-card-width: calc((100% - var(--static-content-carousel-list-gap))/1.80);
   }
 
   .v2-static-content-carousel__col {
-    min-width: 337px;
+    min-width: 21rem;
   }
 
   .v2-static-content-carousel__row {
@@ -157,19 +175,27 @@
     padding-right: 0;
   }
 
+  .v2-static-content-carousel__heading {
+    font-size: var(--f-heading-4-font-size);
+  }
+
+  .v2-static-content-carousel__figure-text {
+    font: var(--f-body-font-size)/var(--f-body-line-height) var(--font-family-body);
+    letter-spacing: var(--f-body-letter-spacing);
+  }
+
   .v2-static-content-carousel__images-list-col {
     position: relative;
   }
 
-  .v2-static-content-carousel__images-list-col--gradient::after {
+  .v2-static-content-carousel__images-list-col::before {
     content: '';
     display: block;
-    height: 100%;
-    width: 30px;
     position: absolute;
     top: 0;
-    pointer-events: none;
-    background: linear-gradient(90deg, rgb(255 255 255 / 0%) 0%, var(--background-gradient) 100%);
-    right: 0;
+    left: 0;
+    height: 100%;
+    width: var(--static-content-carousel-container-margin);
+    background: var(--background-color);
   }
 }
