--- a/blocks/v2-iframe/v2-iframe.css
+++ b/blocks/v2-iframe/v2-iframe.css
@@ -8,6 +8,12 @@
   display: flex;
 }
 
+@supports (height: 1svh) {
+  .v2-iframe.v2-iframe--full-viewport {
+    height: 100svh;
+  }
+}
+
 .v2-iframe--full-viewport iframe {
   width: 100%;
   height: 100%;
